# bsv-messagebox-cloudflare

./: .gitignore  CLAUDE.md  Cargo.toml  KICKOFF.md  M11-GODTIER-PLAN.md  README.md  package-lock.json  package.json  wrangler.toml
docs/: ROADMAP.md
migrations/: 0001_initial.sql
src/: api_docs.rs  beef_upload.rs  d1.rs  devices.rs  error.rs  fcm.rs  fcm_cache.rs  fcm_jwt.rs  fcm_token.rs  lib.rs  message_hub.rs  payments.rs  permissions.rs  r2_presign.rs  routes.rs  socketio_worker.rs  storage.rs  types.rs  validation.rs
src/engineio/: auth.rs  codec.rs  mod.rs  session.rs
src/routes/: mod.rs  send_message.rs
tests/: HIBERNATION_REPORT.md  e2e_authsocket_brc103.mjs  e2e_authsocket_full.mjs  e2e_live_parity.py  e2e_message_box_client_full.mjs  e2e_message_cycle.sh  e2e_parity.sh  e2e_payment.py  e2e_r2_upload.py  e2e_real_sats.py  e2e_socketio_transport.mjs  e2e_ws_auth.py  e2e_ws_hibernation_prod.py  e2e_ws_lifecycle.py  e2e_ws_payment.py  e2e_ws_send_paths.py  e2e_ws_subscribe.py
tests/load_gen/: Cargo.toml  RESULTS.md  run.sh
tests/load_gen/src/: analytics.rs  connect.rs  handshake.rs  identity.rs  load.rs  main.rs  serialize.rs
tests/wire_compat_probe/: RESULTS.md  package-lock.json  package.json  probe-aggressive.mjs  probe.mjs  sign_for_probe.py
